Fix missing background images

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -84,7 +84,7 @@ $breakpoint-large: 2074px;  /* small desktop <-> full desktop */
   font-weight: var(--weight-normal);
   color: --base-text-colour;
 }
-html, body {
+html {
   background-color: var(--yellow-dull);
 }
 h1 {
